--- a/src/Lottery.css
+++ b/src/Lottery.css
@@ -1,12 +1,8 @@
-.ticket{
-    color:white;
-    border: 2px solid white;
-    border-radius: 14px;
-    line-height: 40px;
-    font-size: 20px;
-
+.Lottery{
+    display: block;
+    align-items: center;
 }
 
-.ticket span{
-    margin-right: 3px;
+button{
+    margin-right: 60px;
 }
